--- a/package.json
+++ b/package.json
@@ -9,7 +9,34 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "@babel/preset-react": "^7.16.7",
+    "@fortawesome/fontawesome-svg-core": "^6.1.1",
+    "@fortawesome/free-regular-svg-icons": "^6.1.1",
+    "@fortawesome/free-solid-svg-icons": "^6.1.1",
+    "@fortawesome/react-fontawesome": "^0.1.18",
+    "@rails/actioncable": "^6.0.0",
+    "@rails/activestorage": "^6.0.0",
+    "@rails/ujs": "^6.0.0",
+    "@rails/webpacker": "5.3.0",
+    "babel-plugin-transform-react-remove-prop-types": "^0.4.24",
+    "bootstrap": "^5.1.3",
+    "classnames": "^2.3.1",
+    "font-awesome": "^4.7.0",
+    "jquery": "^3.6.0",
+    "node-sass": "^7.0.1",
+    "prop-types": "^15.8.1",
+    "pusher-js": "^7.0.0",
+    "react-datepicker": "^4.8.0",
+    "react-image-gallery": "^1.0.7",
+    "react-redux": "^7.2.0",
+    "react-router-dom": "^5.3.3",
+    "react_ujs": "^2.6.2",
+    "redux": "^4.0.5",
+    "redux-thunk": "^2.3.0",
+    "turbolinks": "^5.2.0",
+    "webpack": "^4.46.0",
+    "webpack-cli": "^3.3.12"
   },
   "scripts": {
     "start": "react-scripts start",
